--- a/css/rank.css
+++ b/css/rank.css
@@ -1,7 +1,7 @@
 
 th,td {
     float:left;
-    background: #FFDDEE;
+    background: #FFDACC;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
